Correct alignment of slots vs day numbers

--- a/app/styles/calendar.scss
+++ b/app/styles/calendar.scss
@@ -23,7 +23,7 @@
     height: auto;
   }
 
-  .ember-power-calendar-day {
+  .ember-power-calendar-day .day {
     text-align: center;
   }
 }
